--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: "3"
 
 services:
   client:
-    build:
-      context: frontend
-      dockerfile: Dockerfile.client
+    image: marcosepp/cict-server:latest
     depends_on: 
       - server
     networks:
@@ -19,9 +17,7 @@ services:
     restart: unless-stopped
 
   server:
-    build:
-      context: backend
-      dockerfile: Dockerfile.server
+    image: marcosepp/cict-client:latest
     depends_on: 
       - db
     networks:
